--- a/backend/task/package.json
+++ b/backend/task/package.json
@@ -11,6 +11,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
