--- a/backend/task/package.json
+++ b/backend/task/package.json
@@ -14,6 +14,7 @@
     "kafkajs": "^2.2.4",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "zod": "^3.23.8"
   }
